--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,8 +6,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="phonebook">
     <meta name="author" content="Olivia Bruce">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="icon" href="https://avatars2.githubusercontent.com/u/216094?s=400&v=4">
+    <link rel="icon" type="image/png" href="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/blue-white-pearls-icons-food-beverage/056572-blue-white-pearl-icon-food-beverage-food-tomatoe-sc44.png" sizes="32x32">
   </head>
   <body>
     <div id="app"></div>
