--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -5,6 +5,7 @@ $color_white: white;
 $color_primary: #F2F4F3;
 $color_secundary: #5DB7DE;
 $color_accent: #DB5461;
+$color_selected: #247BA0;
 
 $color_text: #0B2545;
 $color_text_disable: #BDD1D3;
