--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -28,3 +28,26 @@ body {
   flex-basis: 300px;
   padding: 0 1em;
 }
+
+.add-contact {
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+  cursor: pointer;
+  border: 1px solid $color-secundary;
+  background-color: transparent;
+  width: 60px;
+  height: 60px;
+  font-size: 1em;
+  border-radius: 50px;
+  margin: 0 1em;
+  outline-width: 1px;
+  color: $color-secundary;
+  
+  &:hover {
+    background-color: $color-secundary;
+    color: $color-primary;
+    transition: all 1s;
+  }
+}
+
